--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
   <header>
     <div class="site-title">Asbest Repair 🔧</div>
-    <button class="language-select" onclick="window.location.href='homepageru.html'">RUS</button>
+    <button class="language-select" onclick="window.location.href='HomePageRu.html'">RUS</button>
   </header>
 
   <div class="hero-banner">
