--- a/HomePageRu.html
+++ b/HomePageRu.html
@@ -317,7 +317,7 @@
 
   <header>
     <div class="site-title">Asbest Repair 🔧</div>
-    <button class="language-select" onclick="window.location.href='homepageest.html'">EST</button>
+    <button class="language-select" onclick="window.location.href='index.html'">EST</button>
   </header>
 
   <div class="hero-banner">
